# temper

./: .code-review-pass  .dockerignore  .dst-review-pass  .env.example  .gitignore  CLAUDE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  TEMPER_BUILDER.skill.md  TEMPER_USER.skill.md  dist-workspace.toml  docker-compose.yml  railway.toml  rust-toolchain.toml  temper-course.html
crates/temper-agent-runtime/: Cargo.toml
crates/temper-agent-runtime/src/: lib.rs  runner.rs
crates/temper-agent-runtime/src/providers/: anthropic.rs  (+2 more)
crates/temper-authz/: Cargo.toml
crates/temper-authz/src/: context.rs  engine.rs  error.rs  lib.rs  metrics.rs  policy_gen.rs
crates/temper-cli/: Cargo.toml
crates/temper-cli/src/: main.rs  util.rs  verify_ioa.rs
crates/temper-codegen/: Cargo.toml
crates/temper-codegen/src/: entity.rs  generator.rs  lib.rs  messages.rs  state_machine.rs
crates/temper-evolution/: Cargo.toml
crates/temper-evolution/src/: chain.rs  insight.rs  lib.rs  pg_store.rs  records.rs  store.rs
crates/temper-executor/: Cargo.toml
crates/temper-executor/src/: agent_type.rs  daemon.rs  health.rs  main.rs  schedule.rs
crates/temper-jit/: Cargo.toml
crates/temper-jit/benches/: table_eval.rs
crates/temper-jit/src/: lib.rs  shadow.rs  swap.rs  table.rs
crates/temper-macros/: Cargo.toml
crates/temper-macros/src/: lib.rs
crates/temper-mcp/: Cargo.toml
crates/temper-mcp/src/: convert.rs  error.rs  lib.rs  lib_tests.rs  main.rs  protocol.rs  repl.rs  runtime.rs  sandbox.rs  spec_loader.rs  tools.rs
crates/temper-observe/: Cargo.toml
crates/temper-observe/src/: clickhouse.rs  error.rs  lib.rs  memory.rs  otel.rs  schema.rs  store.rs  trajectory.rs  wide_event.rs
crates/temper-odata/: Cargo.toml
crates/temper-odata/src/: error.rs  lib.rs  path.rs  query.rs
crates/temper-optimize/: Cargo.toml
crates/temper-optimize/src/: cache.rs  lib.rs  placement.rs  query.rs  safety.rs  types.rs
crates/temper-ots/: Cargo.toml
crates/temper-ots/src/: builder.rs  lib.rs
crates/temper-platform/: Cargo.toml
crates/temper-platform/src/: bearer_auth.rs  bootstrap.rs  deploy.rs  hooks.rs  identity_cache.rs  lib.rs  os_apps.rs  recovery.rs  router.rs  spec_store.rs  state.rs  tenant_access.rs  tenant_api.rs  ws.rs
crates/temper-platform/tests/: compile_first_e2e.rs  identity_e2e.rs  integration_engine.rs  platform_e2e_dst.rs  system_entity_actors.rs  system_entity_dst.rs
crates/temper-runtime/: Cargo.toml
crates/temper-runtime/src/: buggify.rs  lib.rs  tenant.rs  webhook.rs
crates/temper-sandbox/: Cargo.toml
crates/temper-sandbox/src/: convert.rs  dispatch.rs  governance.rs  helpers.rs  http.rs  lib.rs  repl.rs  runner.rs
crates/temper-sdk/: Cargo.toml
crates/temper-sdk/src/: client.rs  lib.rs  sse.rs  types.rs
crates/temper-server/: Cargo.toml
crates/temper-server/benches/: actor_throughput.rs
crates/temper-server/src/: api.rs  authz_helpers.rs  blobs.rs  constraint_engine.rs  dispatch.rs  entity_actor.rs  event_store.rs  events.rs  eventual_invariants.rs  idempotency.rs  insight_generator.rs  lib.rs  observe_routes.rs  platform_store.rs  query_eval.rs  registry.rs  registry_bootstrap.rs  request_context.rs  response.rs  router.rs  router_test.rs  runtime_metrics.rs  secret_template.rs  sentinel.rs  state.rs  wasm_authz_gate.rs  wasm_registry.rs  webhook_receiver.rs  webhooks.rs
crates/temper-server/static/: temper-client.js
crates/temper-server/tests/: adapter_dispatch.rs  dst_hotswap.rs  dst_lifecycle.rs  dst_multi_tenant.rs  dst_persistence.rs  dst_platform_boot.rs  dst_platform_cedar.rs  dst_platform_index.rs  dst_platform_random.rs  dst_platform_rollback.rs  e2e_gepa_loop.rs  ensure_entity_loaded.rs  gepa_manual_verification.rs  gmail_oauth_dst.rs  multi_tenant.rs  odata_read.rs  passivation_respawn.rs  reaction_cascade.rs  wasm_dispatch.rs
crates/temper-spec/: Cargo.toml
crates/temper-spec/src/: lib.rs  naming.rs
crates/temper-store-postgres/: Cargo.toml
crates/temper-store-postgres/src/: lib.rs  migration.rs  schema.rs  store.rs
crates/temper-store-redis/: Cargo.toml
crates/temper-store-redis/src/: cache.rs  error.rs  event_store.rs  keys.rs  lib.rs  mailbox.rs  placement.rs
crates/temper-store-sim/: Cargo.toml
crates/temper-store-sim/src/: lib.rs
crates/temper-store-turso/: Cargo.toml
crates/temper-store-turso/src/: lib.rs  metrics.rs  router.rs  schema.rs  store.rs
crates/temper-transport/: Cargo.toml
crates/temper-transport/src/: lib.rs
crates/temper-verify/: Cargo.toml
crates/temper-verify/src/: cascade.rs  checker.rs  lib.rs  model.rs  paths.rs  proptest_gen.rs  simulation.rs  smt.rs
crates/temper-wasm/: Cargo.toml
crates/temper-wasm/modules/: http_fetch.wasm
crates/temper-wasm/src/: authorized_host.rs  engine.rs  host_trait.rs  lib.rs  metrics.rs  stream.rs  types.rs
crates/temper-wasm/tests/: e2e_invoke.rs
os-apps/project-management/: APP.md  Cargo.toml  app.toml  comment.ioa.toml  issue.ioa.toml  label.ioa.toml  model.csdl.xml  project.ioa.toml
os-apps/project-management/policies/: issue.cedar
os-apps/project-management/specs/: comment.ioa.toml  cycle.ioa.toml  issue.ioa.toml  model.csdl.xml
os-apps/project-management/src/: lib.rs
reference-apps/ecommerce/: Cargo.toml  README.md  docker-compose.yml  integration.toml
reference-apps/ecommerce/benches/: agent_checkout.rs
reference-apps/ecommerce/specs/: model.csdl.xml  order.ioa.toml  payment.ioa.toml  shipment.ioa.toml
reference-apps/ecommerce/src/: lib.rs
reference-apps/ecommerce/tests/: ecommerce_cascade.rs  ecommerce_dst.rs  interactive_demo.rs
reference-apps/oncall/: Cargo.toml  docker-compose.yml  integration.toml  otel-collector-config.yml
reference-apps/oncall/benches/: agent_triage.rs
reference-apps/oncall/specs/: escalation_policy.ioa.toml  model.csdl.xml  page.ioa.toml  postmortem.ioa.toml  remediation.ioa.toml
reference-apps/oncall/src/: lib.rs
reference-apps/oncall/tests/: interactive_demo.rs  oncall_cascade.rs  oncall_dst.rs
(+1134 files in other folders)
