[package]
name = "temper-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Temper Agent Runtime — core agent execution loop with pluggable LLM providers and tool registries"

[dependencies]
temper-sdk = { workspace = true }
temper-sandbox = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
futures-core = "0.3"
bytes = "1"
base64 = "0.22"
dirs = "6"
sha2 = { workspace = true }
# pydantic/monty Rust sandbox crate
monty = { git = "https://github.com/pydantic/monty.git", package = "monty", rev = "87f8f3104e9f0da0bf03f59a745b1e364d39d3bf" }
