[package]
name = "temper-authz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cedar-based authorization engine for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
cedar-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
