[package]
name = "temper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for Temper specification management and code generation"

[[bin]]
name = "temper"
path = "src/main.rs"

[dependencies]
temper-spec = { workspace = true }
temper-codegen = { workspace = true }
temper-verify = { workspace = true }
temper-platform = { workspace = true }
temper-server = { workspace = true, features = ["observe"] }
temper-mcp = { workspace = true }
temper-runtime = { workspace = true }
temper-jit = { workspace = true }
temper-observe = { workspace = true }
temper-store-postgres = { workspace = true }
temper-store-turso = { workspace = true }
temper-store-redis = { workspace = true }
temper-evolution = { workspace = true }
temper-sdk = { workspace = true }
temper-agent-runtime = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "6"
dotenvy = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
open = "5"
base64 = "0.22"
sha2 = { workspace = true }
hex = "0.4"
url = "2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
