[package]
name = "temper-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Code generation from Temper specifications to Rust types and OData endpoints"

[dependencies]
temper-spec = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
