[package]
name = "temper-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Code generation from Temper specifications to Rust actor code"

[dependencies]
temper-spec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
