[package]
name = "temper-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MCP stdio server for Temper Code Mode tools"

[dependencies]
temper-sandbox = { workspace = true }
temper-ots = { workspace = true }
temper-runtime = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt", "macros"] }
reqwest = { workspace = true }
tracing = { workspace = true }

# pydantic/monty Rust sandbox crate
monty = { git = "https://github.com/pydantic/monty.git", package = "monty", rev = "bf7c7ef" }

[dev-dependencies]
axum = { workspace = true }
temper-server = { workspace = true, features = ["observe"] }
temper-runtime = { workspace = true }
temper-spec = { workspace = true }
temper-store-turso = { workspace = true }
