[package]
name = "temper-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Observability and behavioral telemetry for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
