[package]
name = "temper-odata"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OData v4 protocol implementation for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
