[package]
name = "temper-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Conversational development platform for Temper — developer interview, spec generation, verify-and-deploy pipeline, and production chat"

[dependencies]
temper-spec = { workspace = true }
temper-verify = { workspace = true }
temper-jit = { workspace = true }
temper-server = { workspace = true }
temper-evolution = { workspace = true }
temper-observe = { workspace = true }
temper-runtime = { workspace = true }
temper-authz = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
