[package]
name = "temper-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Temper SDK — thin HTTP client for Temper entity operations"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio-test = { workspace = true }
