[package]
name = "temper-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP server assembly for Temper entity services"

[features]
default = []
observe = ["temper-verify"]

[dependencies]
temper-runtime = { workspace = true }
temper-odata = { workspace = true }
temper-spec = { workspace = true }
temper-jit = { workspace = true }
temper-store-postgres = { workspace = true }
temper-observe = { workspace = true }
temper-authz = { workspace = true }
temper-verify = { workspace = true, optional = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "actor_throughput"
harness = false
