[package]
name = "temper-spec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CSDL + TLA+ specification parser for the Temper framework"

[dependencies]
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
