[package]
name = "temper-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PostgreSQL storage backend for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
