[package]
name = "temper-store-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Redis caching and storage backend for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures-core = "0.3"
tokio-stream = { workspace = true }
