[package]
name = "temper-store-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "In-memory deterministic event store for simulation testing"

[dependencies]
temper-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
