[package]
name = "temper-store-turso"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Turso/libSQL storage backend for Temper entity services"

[dependencies]
temper-runtime = { workspace = true }
serde_json = { workspace = true }
libsql = "0.9.26"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
