[package]
name = "project-management"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false
description = "Bundled project management OS app for agent-driven issue tracking"

[dev-dependencies]
temper-jit = { path = "../../crates/temper-jit" }
temper-runtime = { path = "../../crates/temper-runtime" }
temper-server = { path = "../../crates/temper-server" }
temper-store-postgres = { path = "../../crates/temper-store-postgres" }
temper-verify = { path = "../../crates/temper-verify" }
temper-spec = { path = "../../crates/temper-spec" }
serde_json = { workspace = true }
tokio = { workspace = true }
